Refactor main.html

--- a/main.html
+++ b/main.html
@@ -7,79 +7,11 @@
 <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 
 <body>
-  <nav ng-controller="NavCtrl" class="navbar navbar-default">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-          aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-        <a class="navbar-brand" href="#/home"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-
-          <li class="dropdown">
-            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Cattle <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#/bulls-index">Bulls</a></li>
-              <li><a href="#/cows">Cows</a></li>
-              <li><a href="#/calves">Calves</a></li>
-              <!--<li role="separator" class="divider"></li>-->
-              <li><a href="#/steers">Steers</a></li>
-              <li><a href="#/heifers">Heifers</a></li>
-              <li><a href="#all">All</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#/new-bull">New Bull</a></li>
-              <li><a href="#/new-cow">New Cow</a></li>
-              <li><a href="#/new-calve">New Calve</a></li>
-              <li><a href="#/new-steer">New Steer</a></li>
-
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#/ranchinfo">Ranch Info</a></li>
-              <li><a href="#/settings">Settings</a></li>
-              <li><a href="#/contacts">Contacts</a></li>
-              <li><a href="#/reports">Reports</a></li>
-              <li><a href="#/equipment-inventory">Equipment &#38; Inventory</a></li>
-              <li><a href="#/pastures-pens">Pastures &#38; Pens</a></li>
-              <li><a href="#/pedigrees">Pedigrees</a></li>
-            </ul>
-          </li>
-        </ul>
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Search</button>
-        </form>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" ng-click="checkDB()">Check DB</a></li>
-          <li><a href="#" ng-click="clearDB()">Clear DB</a></li>
-
-        </ul>
-      </div>
-      <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-  </nav>
-
-
-  <div ng-view></div>
+  <div id="app"></div>
 
 </body>
+<script>
+  require('./app')
+</script>
 
 </html>
